# py_client_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: __init__.py  circuit_breaker.py  client.py  config.py  exceptions.py  retry_policies.py
docker/: Dockerfile  docker-compose.yml
docs/: BUILDING_YOUR_FIRST_RESILIENT_CLIENT.md  BUILDING_YOUR_FIRST_RESILIENT_CLIENT_PART2.md  BUILDING_YOUR_FIRST_RESILIENT_CLIENT_PART3.md  CLIENT_GUIDE.md  CLIENT_USAGE.md  RESILIENCE_PATTERNS_101.md  SERVER_SPEC.md  TROUBLESHOOTING.md
examples/: client_demo.py
server/: __init__.py  cache.py  config.py  logging_config.py  main.py  middleware.py  state.py
server/endpoints/: __init__.py  core.py  failure.py  health.py
tests/: __init__.py  test_cache.py  test_circuit_breaker.py  test_client_config.py  test_client_exceptions.py  test_client_integration.py  test_client_performance.py  test_endpoints.py  test_resilient_client.py  test_retry_policies.py  test_state.py
